Add support for loading js dependencies

--- a/app/playscalajs/scripts.scala.html
+++ b/app/playscalajs/scripts.scala.html
@@ -1,4 +1,4 @@
-@(basePath: String, projectName: String)
+@(basePath: String, projectName: String, loadDependencies:Boolean = false)
 
-@selectScript(basePath, projectName)
+@selectScript(basePath, projectName, loadDependencies)
 @launcher(basePath, projectName)
