Add support for jsdeps.

--- a/app/playscalajs/scripts.scala.html
+++ b/app/playscalajs/scripts.scala.html
@@ -1,4 +1,5 @@
-@(basePath: String, projectName: String)
+@(projectName: String, assetsPath: String = "/assets", resourcesPath: String = "/public")
 
-@selectScript(basePath, projectName)
-@launcher(basePath, projectName)
+@selectScript(projectName, assetsPath)
+@launcher(projectName, assetsPath)
+@jsdeps(projectName, assetsPath, resourcesPath)
