--- a/app/playscalajs/launcher.scala.html
+++ b/app/playscalajs/launcher.scala.html
@@ -1,3 +1,3 @@
-@(basePath: String, projectName: String)
+@(projectName: String, assetsPath: String = "/assets")
 
-<script src="@{s"$basePath/${projectName.toLowerCase}-launcher.js"}" type="text/javascript"></script>
+<script src="@{s"$assetsPath/${projectName.toLowerCase}-launcher.js"}" type="text/javascript"></script>
