--- a/app/playscalajs/selectScript.scala.html
+++ b/app/playscalajs/selectScript.scala.html
@@ -1,9 +1,9 @@
-@(basePath: String, projectName: String)
+@(projectName: String, assetsPath: String = "/assets")
 
 @import play.api.Play
 
 @if(Play.isProd(Play.current)) {
-<script src="@{s"$basePath/${projectName.toLowerCase}-opt.js"}" type="text/javascript"></script>
+<script src="@{s"$assetsPath/${projectName.toLowerCase}-opt.js"}" type="text/javascript"></script>
 } else {
-<script src="@{s"$basePath/${projectName.toLowerCase}-fastopt.js"}" type="text/javascript"></script>
+<script src="@{s"$assetsPath/${projectName.toLowerCase}-fastopt.js"}" type="text/javascript"></script>
 }
