--- a/src/main/twirl/playscalajs/launcher.scala.html
+++ b/src/main/twirl/playscalajs/launcher.scala.html
@@ -1,3 +1,3 @@
-@(projectName: String, assetsPath: String = "/assets")
+@(projectName: String, assets: String => String = fileName => s"/assets/$fileName")
 
-<script src="@{s"$assetsPath/${projectName.toLowerCase}-launcher.js"}" type="text/javascript"></script>
+<script src="@assets(projectName.toLowerCase+"-launcher.js")" type="text/javascript"></script>
