--- a/src/main/twirl/playscalajs/selectScript.scala.html
+++ b/src/main/twirl/playscalajs/selectScript.scala.html
@@ -1,8 +1,6 @@
-@(projectName: String, assets: String => String = fileName => s"/assets/$fileName")
+@(projectName: String, isProd: Boolean, assets: String => String = fileName => s"/assets/$fileName")
 
-@import play.api.Play
-
-@if(Play.isProd(Play.current)) {
+@if(isProd) {
 <script src="@assets(projectName.toLowerCase+"-opt.js")" type="text/javascript"></script>
 } else {
 <script src="@assets(projectName.toLowerCase+"-fastopt.js")" type="text/javascript"></script>
