--- a/src/main/twirl/scalajs/launcher.scala.html
+++ b/src/main/twirl/scalajs/launcher.scala.html
@@ -1,3 +1,5 @@
+@import play.twirl.api.TwirlFeatureImports.defining
+
 @(projectName:    String,
   assets:         String => String,
   resourceExists: String => Boolean
