--- a/src/main/twirl/scalajs/jsScript.scala.html
+++ b/src/main/twirl/scalajs/jsScript.scala.html
@@ -1,3 +1,3 @@
-@(src: String)
+@(src: String, htmlAttributes: Html = Html(""))
 
-<script src="@src" type="text/javascript"></script>
+<script src="@src" type="text/javascript" @htmlAttributes></script>
