--- a/src/main/twirl/scalajs/launcher.scala.html
+++ b/src/main/twirl/scalajs/launcher.scala.html
@@ -1,10 +1,11 @@
 @(projectName:    String,
   assets:         String => String,
-  resourceExists: String => Boolean
+  resourceExists: String => Boolean,
+  htmlAttributes: Html = Html("")
 )
 
 @defining(s"${projectName.toLowerCase}-launcher.js") { launcher =>
   @if(resourceExists(launcher)) {
-    @jsScript(assets(launcher))
+    @jsScript(assets(launcher), htmlAttributes)
   }
 }
