--- a/src/main/twirl/scalajs/selectScript.scala.html
+++ b/src/main/twirl/scalajs/selectScript.scala.html
@@ -6,7 +6,8 @@
 
 @defining(s"${projectName.toLowerCase}") { name =>
   @{
-    Seq(s"$name-opt.js", s"$name-fastopt.js", s"$name-opt-bundle.js", s"$name-fastopt-bundle.js")
-      .find(resourceExists).map(name => jsScript(assets(name), htmlAttributes))
+    val possibleBuildArtifactSuffixes = Seq("opt-bundle", "fastopt-bundle", "opt", "fastopt")
+    possibleBuildArtifactSuffixes.map(suffix => s"$name-$suffix.js")
+      .find(resourceExists).map(filename => jsScript(assets(filename), htmlAttributes))
   }
 }
