--- a/src/main/twirl/scalajs/selectScript.scala.html
+++ b/src/main/twirl/scalajs/selectScript.scala.html
@@ -6,7 +6,14 @@
 
 @defining(s"${projectName.toLowerCase}") { name =>
   @{
-    val possibleArtifacts = Seq(s"$name-opt-bundle.js", s"$name-fastopt-bundle.js", s"$name-opt/main.js", s"$name-fastopt/main.js")
+    val possibleArtifacts = Seq(
+      s"$name-opt-bundle.js",
+      s"$name-fastopt-bundle.js",
+      s"$name-opt/main.js",
+      s"$name-fastopt/main.js",
+      s"$name-opt.js",
+      s"$name-fastopt.js"
+    )
     possibleArtifacts.find(resourceExists).map(filename => jsScript(assets(filename), htmlAttributes))
   }
 }
